--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ngx-patterns",
+  "name": "ngx-presenter",
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
     "core-js": "^2.4.1",
+    "immutable": "^3.8.2",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
