--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
 # compiled output
+/.ng_pkg_build
 /dist
+/dist.tgz
 /dist-server
 /tmp
 /out-tsc
