--- a/package.json
+++ b/package.json
@@ -1,7 +1,33 @@
 {
   "name": "ngx-component-outlet",
-  "version": "0.0.0",
+  "version": "0.0.1",
+  "description": "NgComponentOutlet + Data-Binding + Full Lifecycle = NgxComponentOutlet for Angular 5+",
+  "keywords": [
+    "angular",
+    "angular2",
+    "angular4",
+    "angular-library",
+    "angular-components",
+    "component-library",
+    "dynamic-components",
+    "typescript"
+  ],
+  "author": "thekiba <hr@thekiba.io>",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/thekiba/ngx-component-outlet.git"
+  },
+  "maintainers": [
+    {
+      "name": "thekiba",
+      "email": "hr@thekiba.io"
+    }
+  ],
+  "bugs": {
+    "url": "https://github.com/thekiba/ngx-component-outlet/issues"
+  },
+  "homepage": "https://github.com/thekiba/ngx-component-outlet",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -9,30 +35,32 @@
     "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "packagr": "ng-packagr -p ng-package.json"
   },
   "private": true,
-  "dependencies": {
+  "peerDependencies": {
+    "@angular/common": ">=4.3.0 || >5.0.0",
+    "@angular/compiler": ">=4.3.0 || >5.0.0",
+    "@angular/core": ">=4.3.0 || >5.0.0",
+    "@angular/forms": ">=4.3.0 || >5.0.0",
+    "typescript": ">=2.3.0",
+    "rxjs": ">=5.4.3"
+  },
+  "devDependencies": {
     "@angular/animations": "^5.2.9",
     "@angular/cdk": "^5.2.4",
+    "@angular/cli": "~1.7.1",
     "@angular/common": "^5.2.0",
-    "@angular/compiler": "^5.2.0",
     "@angular/core": "^5.2.0",
+    "@angular/compiler": "^5.2.0",
+    "@angular/compiler-cli": "^5.2.0",
     "@angular/forms": "^5.2.0",
     "@angular/http": "^5.2.0",
     "@angular/material": "^5.2.4",
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
-    "core-js": "^2.4.1",
-    "hammerjs": "^2.0.8",
-    "immutable": "^3.8.2",
-    "rxjs": "^5.5.6",
-    "zone.js": "^0.8.19"
-  },
-  "devDependencies": {
-    "@angular/cli": "~1.7.1",
-    "@angular/compiler-cli": "^5.2.0",
     "@angular/language-service": "^5.2.0",
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.2",
@@ -45,9 +73,15 @@
     "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "core-js": "^2.4.1",
+    "hammerjs": "^2.0.8",
+    "immutable": "^3.8.2",
+    "ng-packagr": "^2.4.1",
     "protractor": "~5.1.2",
     "ts-node": "~4.1.0",
     "tslint": "~5.9.1",
-    "typescript": "~2.5.3"
+    "typescript": "~2.5.3",
+    "rxjs": "^5.5.6",
+    "zone.js": "^0.8.19"
   }
 }
