--- a/package.json
+++ b/package.json
@@ -1,33 +1,8 @@
 {
-    "name": "ngx-component-outlet",
-    "version": "0.0.3",
-    "description": "NgComponentOutlet + Data-Binding + Full Lifecycle = NgxComponentOutlet for Angular 5+",
-    "keywords": [
-        "angular",
-        "angular2",
-        "angular4",
-        "angular-library",
-        "angular-components",
-        "component-library",
-        "dynamic-components",
-        "typescript"
-    ],
-    "author": "thekiba <hr@thekiba.io>",
+    "name": "ngx-component-outlet-app",
+    "version": "0.0.0",
+    "private": true,
     "license": "MIT",
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/thekiba/ngx-component-outlet.git"
-    },
-    "maintainers": [
-        {
-            "name": "thekiba",
-            "email": "hr@thekiba.io"
-        }
-    ],
-    "bugs": {
-        "url": "https://github.com/thekiba/ngx-component-outlet/issues"
-    },
-    "homepage": "https://github.com/thekiba/ngx-component-outlet",
     "scripts": {
         "ng": "ng",
         "start": "ng serve",
@@ -36,27 +11,27 @@
         "test": "ng test",
         "lint": "ng lint",
         "e2e": "ng e2e",
-        "packagr": "ng-packagr -p ng-package.json"
+        "packagr": "ng-packagr -p lib/ngx-component-outlet/package.json"
     },
-    "peerDependencies": {
-        "@angular/common": ">=5.0.0 <7.0.0",
-        "@angular/compiler": ">=5.0.0 <7.0.0",
-        "@angular/core": ">=5.0.0 <7.0.0",
-        "typescript": ">=2.3.0",
-        "rxjs": ">=6.0.0 || ^5.6.0-forward-compat.4"
-    },
-    "devDependencies": {
+    "dependencies": {
         "@angular/animations": "5.2.10",
-        "@angular/cdk": "5.2.5",
-        "@angular/cli": "1.7.4",
         "@angular/common": "5.2.10",
-        "@angular/core": "5.2.10",
         "@angular/compiler": "5.2.10",
-        "@angular/compiler-cli": "5.2.10",
+        "@angular/core": "5.2.10",
+        "@angular/forms": "5.2.10",
         "@angular/material": "5.2.5",
         "@angular/platform-browser": "5.2.10",
         "@angular/platform-browser-dynamic": "5.2.10",
         "@angular/router": "5.2.10",
+        "core-js": "^2.4.1",
+        "rxjs": "6.0.0",
+        "rxjs-compat": "6.0.0",
+        "zone.js": "^0.8.26"
+    },
+    "devDependencies": {
+        "@angular/cdk": "5.2.5",
+        "@angular/cli": "1.7.4",
+        "@angular/compiler-cli": "5.2.10",
         "@angular/language-service": "5.2.10",
         "@types/jasmine": "~2.8.3",
         "@types/jasminewd2": "~2.0.2",
@@ -69,15 +44,11 @@
         "karma-coverage-istanbul-reporter": "^1.2.1",
         "karma-jasmine": "~1.1.0",
         "karma-jasmine-html-reporter": "^0.2.2",
-        "core-js": "^2.4.1",
         "hammerjs": "^2.0.8",
         "ng-packagr": "^2.4.1",
         "protractor": "~5.1.2",
         "ts-node": "~4.1.0",
         "tslint": "~5.9.1",
-        "typescript": "2.7.2",
-        "rxjs": "6.0.0",
-        "rxjs-compat": "6.0.0",
-        "zone.js": "^0.8.26"
+        "typescript": "2.6.2"
     }
 }
