Add tests for lifecycle hooks, implement test-case builder, fixes incorrect definition SimpleChange, fixes multiple calls DoCheck hook, updated readme, fixes imports for stackblitz

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,9 +15,6 @@
           "es2017",
           "dom"
         ],
-        "baseUrl": "src",
-        "paths": {
-            "@app/*": [ "app/*" ]
-        }
+        "baseUrl": "src"
     }
 }
