--- a/package.json
+++ b/package.json
@@ -14,25 +14,26 @@
         "packagr": "ng-packagr -p lib/ngx-component-outlet/package.json"
     },
     "dependencies": {
-        "@angular/animations": "5.2.10",
-        "@angular/common": "5.2.10",
-        "@angular/compiler": "5.2.10",
-        "@angular/core": "5.2.10",
-        "@angular/forms": "5.2.10",
-        "@angular/material": "5.2.5",
-        "@angular/platform-browser": "5.2.10",
-        "@angular/platform-browser-dynamic": "5.2.10",
-        "@angular/router": "5.2.10",
+        "@angular/animations": "6.0.2",
+        "@angular/common": "6.0.2",
+        "@angular/compiler": "6.0.2",
+        "@angular/core": "6.0.2",
+        "@angular/forms": "6.0.2",
+        "@angular/material": "6.0.2",
+        "@angular/cdk": "6.0.2",
+        "@angular/platform-browser": "6.0.2",
+        "@angular/platform-browser-dynamic": "6.0.2",
+        "@angular/router": "6.0.2",
         "core-js": "^2.4.1",
         "rxjs": "6.0.0",
         "rxjs-compat": "6.0.0",
         "zone.js": "^0.8.26"
     },
     "devDependencies": {
-        "@angular/cdk": "5.2.5",
-        "@angular/cli": "1.7.4",
-        "@angular/compiler-cli": "5.2.10",
-        "@angular/language-service": "5.2.10",
+        "@angular/cli": "6.0.1",
+        "@angular/compiler-cli": "6.0.2",
+        "@angular/language-service": "6.0.2",
+        "@angular-devkit/build-angular": "~0.6.1",
         "@types/jasmine": "~2.8.3",
         "@types/jasminewd2": "~2.0.2",
         "@types/node": "~6.0.60",
@@ -49,6 +50,6 @@
         "protractor": "~5.1.2",
         "ts-node": "~4.1.0",
         "tslint": "~5.9.1",
-        "typescript": "2.6.2"
+        "typescript": "2.7.2"
     }
 }
