--- a/package.json
+++ b/package.json
@@ -16,32 +16,31 @@
     "test:core": "ng test core",
     "test:forms": "ng test forms",
     "lint": "ng lint",
-    "e2e": "ng e2e",
-    "packagr": "ng-packagr -p lib/ngx-component-outlet/package.json"
+    "e2e": "ng e2e"
   },
   "dependencies": {
-    "@angular/animations": "6.0.7",
+    "@angular/animations": "6.0.9",
     "@angular/cdk": "6.3.3",
-    "@angular/common": "6.0.7",
-    "@angular/compiler": "6.0.7",
-    "@angular/core": "6.0.7",
-    "@angular/forms": "6.0.7",
+    "@angular/common": "6.0.9",
+    "@angular/compiler": "6.0.9",
+    "@angular/core": "6.0.9",
+    "@angular/flex-layout": "^6.0.0-beta.16",
+    "@angular/forms": "6.0.9",
     "@angular/material": "6.3.3",
-    "@angular/platform-browser": "6.0.7",
-    "@angular/platform-browser-dynamic": "6.0.7",
-    "@angular/router": "6.0.7",
+    "@angular/platform-browser": "6.0.9",
+    "@angular/platform-browser-dynamic": "6.0.9",
+    "@angular/router": "6.0.9",
     "core-js": "^2.4.1",
-    "ngx-drag-drop": "^1.0.3",
-    "rxjs": "6.0.0",
+    "rxjs": "6.2.2",
     "rxjs-compat": "6.0.0",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.6.3",
-    "@angular-devkit/build-ng-packagr": "0.6.3",
+    "@angular-devkit/build-angular": "0.6.8",
+    "@angular-devkit/build-ng-packagr": "0.6.8",
     "@angular/cli": "6.0.8",
-    "@angular/compiler-cli": "6.0.7",
-    "@angular/language-service": "6.0.7",
+    "@angular/compiler-cli": "6.0.9",
+    "@angular/language-service": "6.0.9",
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
