--- a/package.json
+++ b/package.json
@@ -1,65 +1,71 @@
 {
-  "name": "ngx-component-outlet-app",
-  "version": "0.0.0",
-  "private": true,
-  "license": "MIT",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "start:prod": "node --max-old-space-size=4096 ./node_modules/.bin/ng serve --prod",
-    "build": "ng build --prod",
-    "build:core": "ng build core --prod",
-    "build:forms": "ng build forms --prod",
-    "build:core:watch": "ng build core",
-    "build:forms:watch": "ng build forms",
-    "test": "ng test",
-    "test:core": "ng test core",
-    "test:forms": "ng test forms",
-    "lint": "ng lint",
-    "e2e": "ng e2e"
-  },
-  "dependencies": {
-    "@angular/animations": "6.1.0",
-    "@angular/cdk": "6.3.3",
-    "@angular/common": "6.1.0",
-    "@angular/compiler": "6.1.0",
-    "@angular/core": "6.1.0",
-    "@angular/flex-layout": "^6.0.0-beta.16",
-    "@angular/forms": "6.1.0",
-    "@angular/material": "6.3.3",
-    "@angular/platform-browser": "6.1.0",
-    "@angular/platform-browser-dynamic": "6.1.0",
-    "@angular/router": "6.1.0",
-    "core-js": "^2.4.1",
-    "rxjs": "6.2.2",
-    "rxjs-compat": "6.0.0",
-    "zone.js": "^0.8.26"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "0.6.8",
-    "@angular-devkit/build-ng-packagr": "0.6.8",
-    "@angular/cli": "6.1.2",
-    "@angular/compiler-cli": "6.1.0",
-    "@angular/language-service": "6.1.0",
-    "@types/jasmine": "~2.8.3",
-    "@types/jasminewd2": "~2.0.2",
-    "@types/node": "~6.0.60",
-    "codelyzer": "^4.0.1",
-    "hammerjs": "^2.0.8",
-    "jasmine-core": "~2.8.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~2.0.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
-    "karma-jasmine": "~1.1.0",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "ng-packagr": "^2.4.1",
-    "protractor": "~5.1.2",
-    "ts-node": "~4.1.0",
-    "tsickle": ">=0.25.5",
-    "tslib": "^1.7.1",
-    "tslint": "~5.9.1",
-    "typescript": "2.7.2",
-    "webpack-bundle-analyzer": "^2.13.1"
-  }
+    "name": "ngx-component-outlet-app",
+    "version": "0.0.0",
+    "private": true,
+    "license": "MIT",
+    "scripts": {
+        "ng": "ng",
+        "start": "ng serve",
+        "start:prod": "node --max-old-space-size=4096 ./node_modules/.bin/ng serve --prod",
+        "build": "ng build --prod",
+        "build:core": "ng build core --prod",
+        "build:forms": "ng build forms --prod",
+        "build:core:watch": "ng build core",
+        "build:forms:watch": "ng build forms",
+        "test": "ng test",
+        "test:core": "ng test core",
+        "test:forms": "ng test forms",
+        "lint": "ng lint",
+        "e2e": "ng e2e"
+    },
+    "dependencies": {
+        "@angular/animations": "6.1.9",
+        "@angular/cdk": "6.4.7",
+        "@angular/common": "6.1.9",
+        "@angular/compiler": "6.1.9",
+        "@angular/core": "6.1.9",
+        "@angular/flex-layout": "6.0.0-beta.18",
+        "@angular/forms": "6.1.9",
+        "@angular/material": "6.4.7",
+        "@angular/platform-browser": "6.1.9",
+        "@angular/platform-browser-dynamic": "6.1.9",
+        "@angular/router": "6.1.9",
+        "core-js": "^2.4.1",
+        "rxjs": "6.2.2",
+        "rxjs-compat": "6.0.0",
+        "zone.js": "^0.8.26"
+    },
+    "devDependencies": {
+        "@angular-devkit/build-angular": "0.6.8",
+        "@angular-devkit/build-ng-packagr": "0.6.8",
+        "@angular/cli": "6.2.3",
+        "@angular/compiler-cli": "6.1.9",
+        "@angular/language-service": "6.1.9",
+        "@types/jasmine": "~2.8.3",
+        "@types/jasminewd2": "~2.0.2",
+        "@types/node": "~6.0.60",
+        "codelyzer": "^4.0.1",
+        "cz-customizable": "^5.2.0",
+        "hammerjs": "^2.0.8",
+        "jasmine-core": "~2.8.0",
+        "jasmine-spec-reporter": "~4.2.1",
+        "karma": "~2.0.0",
+        "karma-chrome-launcher": "~2.2.0",
+        "karma-coverage-istanbul-reporter": "^1.2.1",
+        "karma-jasmine": "~1.1.0",
+        "karma-jasmine-html-reporter": "^0.2.2",
+        "ng-packagr": "^2.4.1",
+        "protractor": "~5.1.2",
+        "ts-node": "~4.1.0",
+        "tsickle": ">=0.25.5",
+        "tslib": "^1.7.1",
+        "tslint": "~5.9.1",
+        "typescript": "2.7.2",
+        "webpack-bundle-analyzer": "^2.13.1"
+    },
+    "config": {
+        "commitizen": {
+            "path": "node_modules/cz-customizable"
+        }
+    }
 }
