--- a/projects/core/package.json
+++ b/projects/core/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@ngxd/core",
-    "version": "7.0.0-beta.0",
+    "version": "7.0.0",
     "description": "NGXD is a dynamic pattern + library for Angular",
     "keywords": [
         "angular",
