--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
     "name": "ngx-component-outlet-app",
-    "version": "7.0.1",
+    "version": "7.0.2",
     "private": true,
     "license": "MIT",
     "scripts": {
         "ng": "ng",
+        "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
         "start": "ng serve",
         "start:prod": "node --max-old-space-size=4096 ./node_modules/.bin/ng serve --prod",
         "build": "ng build --prod",
