chore(tools): run tests on Travis CI

--- a/angular.json
+++ b/angular.json
@@ -155,7 +155,8 @@
               "projects/core/tsconfig.spec.json"
             ],
             "exclude": [
-              "**/node_modules/**"
+              "**/node_modules/**",
+              "**/test/**"
             ]
           }
         }
