chore(tools): add prettier

--- a/package.json
+++ b/package.json
@@ -57,11 +57,14 @@
         "karma-jasmine": "~1.1.0",
         "karma-jasmine-html-reporter": "^0.2.2",
         "ng-packagr": "^2.4.1",
+        "prettier": "1.16.4",
         "protractor": "~5.1.2",
         "ts-node": "~4.1.0",
         "tsickle": ">=0.25.5",
         "tslib": "^1.7.1",
         "tslint": "~5.9.1",
+        "tslint-config-prettier": "^1.18.0",
+        "tslint-plugin-prettier": "^2.0.1",
         "typescript": "3.1.6",
         "webpack-bundle-analyzer": "^2.13.1"
     },
