--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "private": true,
     "license": "MIT",
     "scripts": {
+        "commit": "git-cz",
         "ng": "ng",
         "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
         "start": "ng serve",
@@ -18,6 +19,10 @@
         "test:forms": "ng test forms",
         "lint": "ng lint",
         "lint:core": "ng lint core",
+        "format": "npm run lint -- --fix",
+        "format:core": "npm run lint:core -- --fix",
+        "hooks:install": "node node_modules/husky/husky.js install",
+        "hooks:uninstall": "node node_modules/husky/husky.js uninstall",
         "e2e": "ng e2e"
     },
     "dependencies": {
@@ -47,8 +52,10 @@
         "@types/jasminewd2": "~2.0.5",
         "@types/node": "10.12.0",
         "codelyzer": "4.5.0",
+        "commitizen": "^3.0.7",
         "cz-customizable": "^5.2.0",
         "hammerjs": "^2.0.8",
+        "husky": "^1.3.1",
         "jasmine-core": "~2.8.0",
         "jasmine-spec-reporter": "~4.2.1",
         "karma": "~2.0.0",
@@ -56,6 +63,7 @@
         "karma-coverage-istanbul-reporter": "^1.2.1",
         "karma-jasmine": "~1.1.0",
         "karma-jasmine-html-reporter": "^0.2.2",
+        "lint-staged": "^8.1.5",
         "ng-packagr": "^2.4.1",
         "prettier": "1.16.4",
         "protractor": "~5.1.2",
@@ -71,6 +79,17 @@
     "config": {
         "commitizen": {
             "path": "node_modules/cz-customizable"
+        }
+    },
+    "lint-staged": {
+        "*.ts": [
+            "tslint --fix",
+            "git add"
+        ]
+    },
+    "husky": {
+        "hooks": {
+            "pre-commit": "lint-staged"
         }
     }
 }
