--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
         "ng-packagr": "^4.7.1",
         "prettier": "1.16.4",
         "protractor": "~5.1.2",
+        "schematics-utilities": "^1.1.2",
         "ts-node": "~4.1.0",
         "tsickle": ">=0.25.5",
         "tslib": "^1.7.1",
