fix: hide angular v9 warning

--- a/projects/core/package.json
+++ b/projects/core/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@ngxd/core",
-    "version": "8.0.0",
+    "version": "9.0.0",
     "description": "NGXD is a dynamic pattern + library for Angular",
     "keywords": [
         "angular",
@@ -28,8 +28,8 @@
     },
     "homepage": "https://github.com/IndigoSoft/ngxd",
     "peerDependencies": {
-        "@angular/common": "^6.0.0-rc.0 || ^6.0.0 || ^7.0.0  || ^8.0.0",
-        "@angular/core": "^6.0.0-rc.0 || ^6.0.0 || ^7.0.0 || ^8.0.0",
+        "@angular/common": "^6.0.0-rc.0 || ^6.0.0 || ^7.0.0 || ^8.0.0 || ^9.0.0",
+        "@angular/core": "^6.0.0-rc.0 || ^6.0.0 || ^7.0.0 || ^8.0.0 || ^9.0.0",
         "rxjs": ">=6.0.0 || ^5.6.0-forward-compat.4"
     }
 }
