--- a/package.json
+++ b/package.json
@@ -1,95 +1,95 @@
 {
-    "name": "ngx-component-outlet-app",
-    "version": "9.0.4",
-    "private": true,
-    "license": "MIT",
-    "scripts": {
-        "commit": "git-cz",
-        "ng": "ng",
-        "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
-        "start": "ng serve",
-        "start:prod": "node --max-old-space-size=4096 ./node_modules/.bin/ng serve --prod",
-        "build": "ng build --prod",
-        "build:core": "ng build core --prod",
-        "build:forms": "ng build forms --prod",
-        "build:core:watch": "ng build core",
-        "build:forms:watch": "ng build forms",
-        "test": "ng test",
-        "test:core": "ng test core",
-        "test:forms": "ng test forms",
-        "lint": "ng lint",
-        "lint:core": "ng lint core",
-        "format": "npm run lint -- --fix",
-        "format:core": "npm run lint:core -- --fix",
-        "hooks:install": "node node_modules/husky/husky.js install",
-        "hooks:uninstall": "node node_modules/husky/husky.js uninstall",
-        "e2e": "ng e2e"
-    },
-    "dependencies": {
-        "@angular/animations": "9.0.1",
-        "@angular/cdk": "9.0.0",
-        "@angular/common": "9.0.1",
-        "@angular/compiler": "9.0.1",
-        "@angular/core": "9.0.1",
-        "@angular/flex-layout": "7.0.0-beta.19",
-        "@angular/forms": "9.0.1",
-        "@angular/material": "9.0.0",
-        "@angular/platform-browser": "9.0.1",
-        "@angular/platform-browser-dynamic": "9.0.1",
-        "@angular/router": "9.0.1",
-        "core-js": "^2.5.7",
-        "rxjs": "6.3.3",
-        "rxjs-compat": "6.3.3",
-        "zone.js": "^0.8.26"
-    },
-    "devDependencies": {
-        "@angular-devkit/build-angular": "0.900.2",
-        "@angular-devkit/build-ng-packagr": "0.900.2",
-        "@angular/cli": "9.0.2",
-        "@angular/compiler-cli": "9.0.1",
-        "@angular/language-service": "9.0.1",
-        "@types/jasmine": "~2.8.9",
-        "@types/jasminewd2": "~2.0.5",
-        "@types/node": "12.12.27",
-        "codelyzer": "4.5.0",
-        "commitizen": "^3.0.7",
-        "cz-customizable": "^5.2.0",
-        "hammerjs": "^2.0.8",
-        "husky": "^1.3.1",
-        "jasmine-core": "~2.8.0",
-        "jasmine-spec-reporter": "~4.2.1",
-        "karma": "~2.0.0",
-        "karma-chrome-launcher": "~2.2.0",
-        "karma-coverage-istanbul-reporter": "^1.2.1",
-        "karma-jasmine": "~1.1.0",
-        "karma-jasmine-html-reporter": "^0.2.2",
-        "lint-staged": "^8.1.5",
-        "ng-packagr": "^4.7.1",
-        "prettier": "1.16.4",
-        "protractor": "~5.1.2",
-        "ts-node": "~4.1.0",
-        "tsickle": ">=0.25.5",
-        "tslib": "^1.7.1",
-        "tslint": "~5.9.1",
-        "tslint-config-prettier": "^1.18.0",
-        "tslint-plugin-prettier": "^2.0.1",
-        "typescript": "3.7.5",
-        "webpack-bundle-analyzer": "^2.13.1"
-    },
-    "config": {
-        "commitizen": {
-            "path": "node_modules/cz-customizable"
-        }
-    },
-    "lint-staged": {
-        "*.ts": [
-            "tslint --fix",
-            "git add"
-        ]
-    },
-    "husky": {
-        "hooks": {
-            "pre-commit": "lint-staged"
-        }
+  "name": "ngx-component-outlet-app",
+  "version": "9.0.4",
+  "private": true,
+  "license": "MIT",
+  "scripts": {
+    "commit": "git-cz",
+    "ng": "ng",
+    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
+    "start": "ng serve",
+    "start:prod": "node --max-old-space-size=4096 ./node_modules/.bin/ng serve --prod",
+    "build": "ng build --prod",
+    "build:core": "ng build core --prod",
+    "build:forms": "ng build forms --prod",
+    "build:core:watch": "ng build core",
+    "build:forms:watch": "ng build forms",
+    "test": "ng test",
+    "test:core": "ng test core",
+    "test:forms": "ng test forms",
+    "lint": "ng lint",
+    "lint:core": "ng lint core",
+    "format": "npm run lint -- --fix",
+    "format:core": "npm run lint:core -- --fix",
+    "hooks:install": "node node_modules/husky/husky.js install",
+    "hooks:uninstall": "node node_modules/husky/husky.js uninstall",
+    "e2e": "ng e2e"
+  },
+  "dependencies": {
+    "@angular/animations": "10.0.4",
+    "@angular/cdk": "9.0.0",
+    "@angular/common": "10.0.4",
+    "@angular/compiler": "10.0.4",
+    "@angular/core": "10.0.4",
+    "@angular/flex-layout": "7.0.0-beta.19",
+    "@angular/forms": "10.0.4",
+    "@angular/material": "9.0.0",
+    "@angular/platform-browser": "10.0.4",
+    "@angular/platform-browser-dynamic": "10.0.4",
+    "@angular/router": "10.0.4",
+    "core-js": "^2.5.7",
+    "rxjs": "6.6.0",
+    "rxjs-compat": "6.3.3",
+    "zone.js": "^0.10.3"
+  },
+  "devDependencies": {
+    "@angular-devkit/build-angular": "0.1000.3",
+    "@angular-devkit/build-ng-packagr": "0.1000.3",
+    "@angular/cli": "10.0.3",
+    "@angular/compiler-cli": "10.0.4",
+    "@angular/language-service": "10.0.4",
+    "@types/jasmine": "~2.8.9",
+    "@types/jasminewd2": "~2.0.5",
+    "@types/node": "12.12.27",
+    "codelyzer": "^6.0.0",
+    "commitizen": "^3.0.7",
+    "cz-customizable": "^5.2.0",
+    "hammerjs": "^2.0.8",
+    "husky": "^1.3.1",
+    "jasmine-core": "~3.5.0",
+    "jasmine-spec-reporter": "~5.0.0",
+    "karma": "~5.0.0",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage-istanbul-reporter": "~3.0.2",
+    "karma-jasmine": "~3.3.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
+    "lint-staged": "^8.1.5",
+    "ng-packagr": "^10.0.0",
+    "prettier": "1.16.4",
+    "protractor": "~7.0.0",
+    "ts-node": "~4.1.0",
+    "tsickle": "0.38.1",
+    "tslib": "^2.0.0",
+    "tslint": "~6.1.0",
+    "tslint-config-prettier": "^1.18.0",
+    "tslint-plugin-prettier": "^2.0.1",
+    "typescript": "3.9.7",
+    "webpack-bundle-analyzer": "^2.13.1"
+  },
+  "config": {
+    "commitizen": {
+      "path": "node_modules/cz-customizable"
     }
+  },
+  "lint-staged": {
+    "*.ts": [
+      "tslint --fix",
+      "git add"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  }
 }
