--- a/projects/core/package.json
+++ b/projects/core/package.json
@@ -31,5 +31,8 @@
         "@angular/common": "^6.0.0-rc.0 || ^6.0.0 || ^7.0.0 || ^8.0.0 || ^9.0.0",
         "@angular/core": "^6.0.0-rc.0 || ^6.0.0 || ^7.0.0 || ^8.0.0 || ^9.0.0",
         "rxjs": ">=6.0.0 || ^5.6.0-forward-compat.4"
-    }
+    },
+  "dependencies": {
+    "tslib": "^2.0.0"
+  }
 }
