feat(core): bump v10.0.0 and dropped @angular/core@9 and earlier
BREAKING CHANGE:
DROPPED @angular/core@9 AND EARLIER
If you whant to use @ngxd/core with specific angular version, please install @ngxd/core which version you need:
  @angular/core@7  => npm install @ngxd/core@7
  @angular/core@8  => npm install @ngxd/core@8
  @angular/core@9  => npm install @ngxd/core@9
  @angular/core@10 => npm install @ngxd/core@10

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ngx-component-outlet-app",
-  "version": "9.0.4",
+  "version": "10.0.0",
   "private": true,
   "license": "MIT",
   "scripts": {
@@ -53,6 +53,7 @@
     "@types/node": "12.12.27",
     "codelyzer": "^6.0.0",
     "commitizen": "^3.0.7",
+    "conventional-changelog-cli": "^2.0.34",
     "cz-customizable": "^5.2.0",
     "hammerjs": "^2.0.8",
     "husky": "^1.3.1",
