--- a/projects/core/package.json
+++ b/projects/core/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@ngxd/core",
-    "version": "9.0.4",
+    "version": "10.0.0",
     "description": "NGXD is a dynamic pattern + library for Angular",
     "keywords": [
         "angular",
@@ -28,9 +28,9 @@
     },
     "homepage": "https://github.com/IndigoSoft/ngxd",
     "peerDependencies": {
-        "@angular/common": "^6.0.0-rc.0 || ^6.0.0 || ^7.0.0 || ^8.0.0 || ^9.0.0",
-        "@angular/core": "^6.0.0-rc.0 || ^6.0.0 || ^7.0.0 || ^8.0.0 || ^9.0.0",
-        "rxjs": ">=6.0.0 || ^5.6.0-forward-compat.4"
+        "@angular/common": "^10.0.0",
+        "@angular/core": "^10.0.0",
+        "rxjs": ">=6.0.0"
     },
   "dependencies": {
     "tslib": "^2.0.0"
