--- a/projects/forms/package.json
+++ b/projects/forms/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@ngxd/forms",
-    "version": "0.1.9000",
+    "version": "0.1.10000",
     "description": "NGXD is a dynamic pattern + library for Angular",
     "keywords": [
         "angular",
@@ -28,9 +28,9 @@
     },
     "homepage": "https://github.com/IndigoSoft/ngxd",
     "peerDependencies": {
-        "@angular/common": "^6.0.0-rc.0 || ^6.0.0 || ^7.0.0 || ^8.0.0 || ^9.0.0",
-        "@angular/core": "^6.0.0-rc.0 || ^6.0.0 || ^7.0.0 || ^8.0.0 || ^9.0.0",
-        "@angular/forms": "^6.0.0-rc.0 || ^6.0.0 || ^7.0.0 || ^8.0.0 || ^9.0.0"
+        "@angular/common": "^10.0.0",
+        "@angular/core": "^10.0.0",
+        "@angular/forms": "^10.0.0"
     },
   "dependencies": {
     "tslib": "^2.0.0"
