--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ngx-component-outlet-app",
-  "version": "10.0.0",
+  "version": "11.0.0",
   "private": true,
   "license": "MIT",
   "scripts": {
@@ -26,28 +26,28 @@
     "e2e": "ng e2e"
   },
   "dependencies": {
-    "@angular/animations": "10.0.4",
-    "@angular/cdk": "10.0.2",
-    "@angular/common": "10.0.4",
-    "@angular/compiler": "10.0.4",
-    "@angular/core": "10.0.4",
+    "@angular/animations": "11.2.6",
+    "@angular/cdk": "11.2.5",
+    "@angular/common": "11.2.6",
+    "@angular/compiler": "11.2.6",
+    "@angular/core": "11.2.6",
     "@angular/flex-layout": "7.0.0-beta.19",
-    "@angular/forms": "10.0.4",
+    "@angular/forms": "11.2.6",
     "@angular/material": "10.0.2",
-    "@angular/platform-browser": "10.0.4",
-    "@angular/platform-browser-dynamic": "10.0.4",
-    "@angular/router": "10.0.4",
+    "@angular/platform-browser": "11.2.6",
+    "@angular/platform-browser-dynamic": "11.2.6",
+    "@angular/router": "11.2.6",
     "core-js": "^2.5.7",
-    "rxjs": "6.6.0",
+    "rxjs": "6.6.6",
     "rxjs-compat": "6.3.3",
     "zone.js": "^0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.1000.3",
-    "@angular-devkit/build-ng-packagr": "0.1000.3",
-    "@angular/cli": "10.0.3",
-    "@angular/compiler-cli": "10.0.4",
-    "@angular/language-service": "10.0.4",
+    "@angular-devkit/build-angular": "^0.1102.5",
+    "@angular-devkit/build-ng-packagr": "0.11.4",
+    "@angular/cli": "11.2.5",
+    "@angular/compiler-cli": "11.2.6",
+    "@angular/language-service": "11.2.6",
     "@types/jasmine": "~2.8.9",
     "@types/jasminewd2": "~2.0.5",
     "@types/node": "12.12.27",
@@ -74,7 +74,7 @@
     "tslint": "~6.1.0",
     "tslint-config-prettier": "^1.18.0",
     "tslint-plugin-prettier": "^2.0.1",
-    "typescript": "3.9.7",
+    "typescript": "4.1.5",
     "webpack-bundle-analyzer": ">=3.3.2"
   },
   "config": {
