--- a/package.json
+++ b/package.json
@@ -43,8 +43,8 @@
     "zone.js": "^0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1102.5",
-    "@angular-devkit/build-ng-packagr": "0.11.4",
+    "@angular-devkit/build-angular": "0.1102.5",
+    "@angular-devkit/build-ng-packagr": "0.1100.0-next.5",
     "@angular/cli": "11.2.5",
     "@angular/compiler-cli": "11.2.6",
     "@angular/language-service": "11.2.6",
