--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ngx-component-outlet-app",
-  "version": "11.0.1",
+  "version": "12.0.0",
   "private": true,
   "license": "MIT",
   "scripts": {
@@ -10,8 +10,8 @@
     "start": "ng serve",
     "start:prod": "node --max-old-space-size=4096 ./node_modules/.bin/ng serve --prod",
     "build": "ng build --prod",
-    "build:core": "ng build core --prod",
-    "build:forms": "ng build forms --prod",
+    "build:core": "ng build core --configuration production",
+    "build:forms": "ng build forms --configuration production",
     "build:core:watch": "ng build core",
     "build:forms:watch": "ng build forms",
     "test": "ng test",
@@ -26,56 +26,55 @@
     "e2e": "ng e2e"
   },
   "dependencies": {
-    "@angular/animations": "11.2.6",
-    "@angular/cdk": "11.2.5",
-    "@angular/common": "11.2.6",
-    "@angular/compiler": "11.2.6",
-    "@angular/core": "11.2.6",
-    "@angular/flex-layout": "7.0.0-beta.19",
-    "@angular/forms": "11.2.6",
-    "@angular/material": "10.0.2",
-    "@angular/platform-browser": "11.2.6",
-    "@angular/platform-browser-dynamic": "11.2.6",
-    "@angular/router": "11.2.6",
-    "core-js": "^2.5.7",
-    "rxjs": "6.6.6",
-    "rxjs-compat": "6.3.3",
-    "zone.js": "^0.10.3"
+    "@angular/animations": "12.0.3",
+    "@angular/cdk": "12.0.3",
+    "@angular/common": "12.0.3",
+    "@angular/compiler": "12.0.3",
+    "@angular/core": "12.0.3",
+    "@angular/flex-layout": "12.0.0-beta.34",
+    "@angular/forms": "12.0.3",
+    "@angular/material": "12.0.3",
+    "@angular/platform-browser": "12.0.3",
+    "@angular/platform-browser-dynamic": "12.0.3",
+    "@angular/router": "12.0.3",
+    "core-js": "2.6.12",
+    "rxjs": "6.6.7",
+    "zone.js": "0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.1102.5",
+    "@angular-devkit/build-angular": "12.0.3",
     "@angular-devkit/build-ng-packagr": "0.1100.0-next.5",
-    "@angular/cli": "11.2.5",
-    "@angular/compiler-cli": "11.2.6",
-    "@angular/language-service": "11.2.6",
-    "@types/jasmine": "~2.8.9",
-    "@types/jasminewd2": "~2.0.5",
+    "@angular/cli": "12.0.3",
+    "@angular/compiler-cli": "12.0.3",
+    "@angular/language-service": "12.0.3",
+    "@types/jasmine": "2.8.17",
+    "@types/jasminewd2": "2.0.9",
     "@types/node": "12.12.27",
-    "codelyzer": "^6.0.0",
-    "commitizen": "^3.0.7",
-    "conventional-changelog-cli": "^2.0.34",
-    "cz-customizable": "^5.2.0",
-    "hammerjs": "^2.0.8",
-    "husky": "^1.3.1",
-    "jasmine-core": "~3.5.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.0.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~3.3.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
-    "lint-staged": "^8.1.5",
-    "ng-packagr": "^10.0.0",
+    "codelyzer": "6.0.2",
+    "commitizen": "4.2.4",
+    "conventional-changelog-cli": "2.1.1",
+    "cz-customizable": "6.3.0",
+    "hammerjs": "2.0.8",
+    "husky": "6.0.0",
+    "jasmine-core": "3.7.1",
+    "jasmine-spec-reporter": "7.0.0",
+    "karma": "6.3.3",
+    "karma-chrome-launcher": "3.1.0",
+    "karma-coverage-istanbul-reporter": "3.0.3",
+    "karma-jasmine": "4.0.1",
+    "karma-jasmine-html-reporter": "1.6.0",
+    "lint-staged": "11.0.0",
+    "ng-packagr": "12.0.3",
     "prettier": "1.16.4",
-    "protractor": "~7.0.0",
-    "ts-node": "~4.1.0",
-    "tsickle": "0.38.1",
-    "tslib": "^2.0.0",
-    "tslint": "~6.1.0",
-    "tslint-config-prettier": "^1.18.0",
-    "tslint-plugin-prettier": "^2.0.1",
-    "typescript": "4.1.5",
-    "webpack-bundle-analyzer": ">=3.3.2"
+    "protractor": "7.0.0",
+    "ts-node": "10.0.0",
+    "tsickle": "0.40.0",
+    "tslib": "2.2.0",
+    "tslint": "6.1.3",
+    "tslint-config-prettier": "1.18.0",
+    "tslint-plugin-prettier": "2.3.0",
+    "typescript": "4.2.3",
+    "webpack-bundle-analyzer": "3.9.0"
   },
   "config": {
     "commitizen": {
