feat(core): bump v13.0.0 and dropped @angular/core@12 and earlier
BREAKING CHANGE:

DROPPED ViewEngine

DROPPED @angular/core@12 AND EARLIER

    If you want to use @ngxd/core with a specific angular version, you have to install @ngxd/core which version you need:

      @angular/core@7  => npm install @ngxd/core@7
      @angular/core@8  => npm install @ngxd/core@8
      @angular/core@9  => npm install @ngxd/core@9
      @angular/core@10 => npm install @ngxd/core@10
      @angular/core@11 => npm install @ngxd/core@11
      @angular/core@12 => npm install @ngxd/core@12
      @angular/core@13 => npm install @ngxd/core@13

--- a/angular.json
+++ b/angular.json
@@ -128,7 +128,7 @@
       "prefix": "ngx",
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-ng-packagr:build",
+          "builder": "@angular-devkit/build-angular:ng-packagr",
           "options": {
             "tsConfig": "projects/core/tsconfig.lib.json",
             "project": "projects/core/ng-package.json"
@@ -169,7 +169,7 @@
       "prefix": "lib",
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-ng-packagr:build",
+          "builder": "@angular-devkit/build-angular:ng-packagr",
           "options": {
             "tsConfig": "projects/forms/tsconfig.lib.json",
             "project": "projects/forms/ng-package.json"
