feat(core): bump v15.0.0 and dropped @angular/core@14 and earlier
BREAKING CHANGE:

DROPPED ViewEngine

DROPPED @angular/core@14 AND EARLIER

If you want to use @ngxd/core with a specific angular version, you have to install @ngxd/core which version you need:

   @angular/core@7  => npm install @ngxd/core@7
   @angular/core@8  => npm install @ngxd/core@8
   @angular/core@9  => npm install @ngxd/core@9
   @angular/core@10 => npm install @ngxd/core@10
   @angular/core@11 => npm install @ngxd/core@11
   @angular/core@12 => npm install @ngxd/core@12
   @angular/core@13 => npm install @ngxd/core@13
   @angular/core@14 => npm install @ngxd/core@14
   @angular/core@15 => npm install @ngxd/core@15

--- a/angular.json
+++ b/angular.json
@@ -142,7 +142,10 @@
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
-            "main": "projects/core/src/test.ts",
+            "polyfills": [
+              "zone.js",
+              "zone.js/testing"
+            ],
             "tsConfig": "projects/core/tsconfig.spec.json",
             "karmaConfig": "projects/core/karma.conf.js"
           }
@@ -183,7 +186,10 @@
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
-            "main": "projects/forms/src/test.ts",
+            "polyfills": [
+              "zone.js",
+              "zone.js/testing"
+            ],
             "tsConfig": "projects/forms/tsconfig.spec.json",
             "karmaConfig": "projects/forms/karma.conf.js"
           }
