--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ngx-component-outlet-app",
-  "version": "15.0.0",
+  "version": "16.0.0",
   "private": true,
   "license": "MIT",
   "scripts": {
@@ -12,8 +12,8 @@
     "build": "ng build --prod",
     "build:core": "ng build core --configuration production",
     "build:forms": "ng build forms --configuration production",
-    "build:core:watch": "ng build core",
-    "build:forms:watch": "ng build forms",
+    "build:core:watch": "ng build core --watch",
+    "build:forms:watch": "ng build forms --watch",
     "test": "ng test",
     "test:core": "ng test core",
     "test:forms": "ng test forms",
@@ -27,18 +27,18 @@
   },
   "dependencies": {
     "@angular/animations": "16.0.2",
-    "@angular/cdk": "15.0.0",
+    "@angular/cdk": "16.0.1",
     "@angular/common": "16.0.2",
     "@angular/compiler": "16.0.2",
     "@angular/core": "16.0.2",
     "@angular/flex-layout": "15.0.0-beta.42",
     "@angular/forms": "16.0.2",
-    "@angular/material": "15.0.0",
+    "@angular/material": "16.0.1",
     "@angular/platform-browser": "16.0.2",
     "@angular/platform-browser-dynamic": "16.0.2",
     "@angular/router": "16.0.2",
     "core-js": "2.6.12",
-    "rxjs": "6.6.7",
+    "rxjs": "7.4.0",
     "zone.js": "0.13.0"
   },
   "devDependencies": {
@@ -46,18 +46,22 @@
     "@angular/cli": "16.0.2",
     "@angular/compiler-cli": "16.0.2",
     "@angular/language-service": "16.0.2",
+    "@angular-eslint/builder": "16.0.2",
+    "@angular-eslint/eslint-plugin": "16.0.2",
+    "@angular-eslint/eslint-plugin-template": "16.0.2",
+    "@angular-eslint/template-parser": "16.0.2",
     "@types/jasmine": "2.8.17",
     "@types/jasminewd2": "2.0.9",
     "@types/node": "12.12.27",
-    "codelyzer": "6.0.2",
-    "commitizen": "4.2.4",
+    "codelyzer": "^0.0.28",
+    "commitizen": "^4.3.0",
     "conventional-changelog-cli": "2.1.1",
     "cz-customizable": "6.3.0",
     "hammerjs": "2.0.8",
     "husky": "6.0.0",
     "jasmine-core": "3.7.1",
     "jasmine-spec-reporter": "7.0.0",
-    "karma": "6.3.3",
+    "karma": "6.4.2",
     "karma-chrome-launcher": "3.1.0",
     "karma-coverage-istanbul-reporter": "3.0.3",
     "karma-jasmine": "4.0.1",
@@ -68,11 +72,11 @@
     "protractor": "7.0.0",
     "ts-node": "10.0.0",
     "tslib": "2.3.1",
-    "tslint": "6.1.3",
-    "tslint-config-prettier": "1.18.0",
-    "tslint-plugin-prettier": "2.3.0",
+    "eslint": "8.41.0",
     "typescript": "5.0.4",
-    "webpack-bundle-analyzer": "3.9.0"
+    "webpack-bundle-analyzer": "^4.8.0",
+    "@typescript-eslint/eslint-plugin": "5.59.7",
+    "@typescript-eslint/parser": "5.59.7"
   },
   "config": {
     "commitizen": {
