--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ngx-component-outlet-app",
-  "version": "16.0.0",
+  "version": "17.0.0",
   "private": true,
   "license": "MIT",
   "scripts": {
@@ -15,68 +15,69 @@
     "build:core:watch": "ng build core --watch",
     "build:forms:watch": "ng build forms --watch",
     "test": "ng test",
-    "test:core": "ng test core",
+    "test:core": "./node_modules/.bin/ng test core",
+    "test:core:one": "./node_modules/.bin/ng test core --include='**/component.outlet.lifecycle.spec.ts'",
     "test:forms": "ng test forms",
     "lint": "ng lint",
     "lint:core": "ng lint core",
     "format": "npm run lint -- --fix",
     "format:core": "npm run lint:core -- --fix",
-    "hooks:install": "node node_modules/husky/husky.js install",
-    "hooks:uninstall": "node node_modules/husky/husky.js uninstall",
+    "hooks:install": "husky install",
+    "hooks:uninstall": "husky uninstall",
     "e2e": "ng e2e"
   },
   "dependencies": {
-    "@angular/animations": "16.0.2",
-    "@angular/cdk": "16.0.1",
-    "@angular/common": "16.0.2",
-    "@angular/compiler": "16.0.2",
-    "@angular/core": "16.0.2",
+    "@angular/animations": "17.0.9",
+    "@angular/cdk": "17.1.0",
+    "@angular/common": "17.0.9",
+    "@angular/compiler": "17.0.9",
+    "@angular/core": "17.0.9",
     "@angular/flex-layout": "15.0.0-beta.42",
-    "@angular/forms": "16.0.2",
-    "@angular/material": "16.0.1",
-    "@angular/platform-browser": "16.0.2",
-    "@angular/platform-browser-dynamic": "16.0.2",
-    "@angular/router": "16.0.2",
-    "core-js": "2.6.12",
-    "rxjs": "7.4.0",
-    "zone.js": "0.13.0"
+    "@angular/forms": "17.0.9",
+    "@angular/material": "17.1.0",
+    "@angular/platform-browser": "17.0.9",
+    "@angular/platform-browser-dynamic": "17.0.9",
+    "@angular/router": "17.0.9",
+    "core-js": "3.35.0",
+    "rxjs": "7.8.1",
+    "zone.js": "0.14.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "16.0.2",
-    "@angular/cli": "16.0.2",
-    "@angular/compiler-cli": "16.0.2",
-    "@angular/language-service": "16.0.2",
-    "@angular-eslint/builder": "16.0.2",
-    "@angular-eslint/eslint-plugin": "16.0.2",
-    "@angular-eslint/eslint-plugin-template": "16.0.2",
-    "@angular-eslint/template-parser": "16.0.2",
-    "@types/jasmine": "2.8.17",
-    "@types/jasminewd2": "2.0.9",
-    "@types/node": "12.12.27",
+    "@angular-devkit/build-angular": "^17.0.10",
+    "@angular-eslint/builder": "^17.2.0",
+    "@angular-eslint/eslint-plugin": "17.2.0",
+    "@angular-eslint/eslint-plugin-template": "17.2.0",
+    "@angular-eslint/template-parser": "17.2.0",
+    "@angular/cli": "^17.0.10",
+    "@angular/compiler-cli": "17.0.9",
+    "@angular/language-service": "17.0.9",
+    "@types/jasmine": "5.1.4",
+    "@types/jasminewd2": "2.0.13",
+    "@types/node": "20.11.5",
+    "@typescript-eslint/eslint-plugin": "6.19.0",
+    "@typescript-eslint/parser": "6.19.0",
     "codelyzer": "^0.0.28",
     "commitizen": "^4.3.0",
-    "conventional-changelog-cli": "2.1.1",
-    "cz-customizable": "6.3.0",
+    "conventional-changelog-cli": "4.1.0",
+    "cz-customizable": "7.0.0",
+    "eslint": "8.56.0",
     "hammerjs": "2.0.8",
-    "husky": "6.0.0",
-    "jasmine-core": "3.7.1",
+    "husky": "8.0.3",
+    "jasmine-core": "5.1.1",
     "jasmine-spec-reporter": "7.0.0",
     "karma": "6.4.2",
-    "karma-chrome-launcher": "3.1.0",
+    "karma-chrome-launcher": "3.2.0",
     "karma-coverage-istanbul-reporter": "3.0.3",
-    "karma-jasmine": "4.0.1",
-    "karma-jasmine-html-reporter": "1.6.0",
-    "lint-staged": "11.0.0",
-    "ng-packagr": "16.0.1",
-    "prettier": "1.16.4",
-    "protractor": "7.0.0",
-    "ts-node": "10.0.0",
-    "tslib": "2.3.1",
-    "eslint": "8.41.0",
-    "typescript": "5.0.4",
-    "webpack-bundle-analyzer": "^4.8.0",
-    "@typescript-eslint/eslint-plugin": "5.59.7",
-    "@typescript-eslint/parser": "5.59.7"
+    "karma-jasmine": "5.1.0",
+    "karma-jasmine-html-reporter": "2.1.0",
+    "lint-staged": "15.2.0",
+    "ng-packagr": "17.1.0",
+    "prettier": "3.2.4",
+    "protractor": "^7.0.0",
+    "ts-node": "10.9.2",
+    "tslib": "2.6.2",
+    "typescript": "5.2.2",
+    "webpack-bundle-analyzer": "^4.10.1"
   },
   "config": {
     "commitizen": {
